kubernetes/apps/media/qbittorrent/ingress.yaml
# Kapitel 18: Weboberfläche im Tailnet unter https://qbittorrent.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: qbittorrent
      port:
        number: 8080
  tls:
    - hosts:
        - qbittorrent
